--- a/src/blocks/header/navigation/navList/__refer.scss
+++ b/src/blocks/header/navigation/navList/__refer.scss
@@ -1,4 +1,26 @@
 .navItem__refer {
+  color: $lightGray;
+  font-size: $firstSizeHeading;
+  padding-bottom: 4%;
+  position: relative;
+  &::after {
+    content: "";
+    height: 3px;
+    background-color: $green;
+    @include center-block;
+    position: absolute;
+    left: 50%;
+    bottom: -3px;
+    width: 0;
+    transition: width 0.5s, left 0.5s;
+    
+  }
+  &:hover {
+    &::after {
+      width: 100%;
+      left: 0;
+    }
+  }
   @include breakpoint($sm) {
      
   }
@@ -11,8 +33,17 @@
   @include breakpoint($xxs) {
     
   }
-  &:hover {
-    
-   
+  &:visited {
+     color: $lightGray;
   }
+  &:hover {
+    background-color: transparent;
+  }
+  &:active {
+    color: $lightGray;
+  }
+}
+.navItem__refer, .navItem__refer:hover {
+  border-radius: 0;
+  
 }
