--- a/src/blocks/custom/custom.scss
+++ b/src/blocks/custom/custom.scss
@@ -87,3 +87,4 @@ a {
 @import 'short_hand_classes/visible.scss';
 @import 'short_hand_classes/title.scss';
 @import 'short_hand_classes/paragraph.scss';
+@import 'short_hand_classes/aligned.scss';
