--- a/src/blocks/custom/config/flex.scss
+++ b/src/blocks/custom/config/flex.scss
@@ -1,6 +1,6 @@
 // If there is modernizr library.
 .flexbox {
-	.navItem {
-	  @include flexable('inline-flex', 'row nowrap', 'center', 'center');
-	}  
+	// .navItem {
+	//   @include flexable('inline-flex', 'row nowrap', 'center', 'center');
+	// }  
 }
