--- a/src/blocks/header/navigation/navList/navList.scss
+++ b/src/blocks/header/navigation/navList/navList.scss
@@ -2,23 +2,23 @@
 .navList {
   @include span(10 last);
   @include breakpoint($sm) {
-    font-size: (15em / 16);
     width: 100%;
     float: none;
   }
   @include breakpoint($xs) {
     display: none;
     position: fixed;
-    top: 44px;
+    top: 0;
     left: 0;
     height: 100%;
-    height: calc(100% - 44px);
+    // height: calc(100% - 44px);
     background-color: $darkGray;
     width: 100%;
+    margin: 0;
     flex-direction: column;
     align-items: space-between;
     z-index: 100;
-    padding-top: 50%;
+    padding-top: 20%;
     
   }
 }
