--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,7 +1,22 @@
 .footer {
-  
-  
+  	width: 100%;
+  	min-height: 185px;
+  	position: absolute;
+	z-index: -1;
+  	bottom: 0;
+  	padding-top: (53% / 185 * 10);
+  	@include breakpoint($xs) {
+  		min-height: 75px;
+  		padding: (80% / 185 * 10) 0;
+  	}
+  	@include breakpoint($xxs) {
+  		padding: (100% / 185 * 10) 0;
+  	}
+	&--minecraft {
+  		background-color: $darkGreen;	
+	}
 }
 
 @import 'footerContacts/footerContacts.scss';
-@import 'copyright/copyright.scss';
+@import 'figure/figure.scss';
+
