--- a/src/blocks/header/navigation/navList/navList.scss
+++ b/src/blocks/header/navigation/navList/navList.scss
@@ -18,8 +18,10 @@
     flex-direction: column;
     align-items: space-between;
     z-index: 100;
-    padding-top: 20%;
-    
+    padding-top: 75px;
+  }
+  @include breakpoint($xxs) {
+    padding-top: 100px;
   }
 }
 
