Added new awsome shorthand classes, which i can extend another classes. Made Log In Form.

--- a/src/blocks/custom/config/colors.scss
+++ b/src/blocks/custom/config/colors.scss
@@ -1,5 +1,5 @@
-$lightGray: #e0e0e0;
-$white: #fefeff;
+$lightGray: #ececec;
+$darkenLightGray: #e0e0e0;
 $darkGray:  #1c1b1b;
 $baseColorFont: $darkGray;
 $baseLinkColor: $darkGray;
