--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,10 +1,9 @@
 .footer {
   	width: 100%;
   	min-height: 185px;
-  	position: absolute;
-	z-index: -1;
-  	bottom: 0;
-  	padding-top: (53% / 185 * 10);
+  	position: relative;
+	  z-index: -1;
+  	padding-top: (73% / 185 * 10);
   	@include breakpoint($xs) {
   		min-height: 75px;
   		padding: (80% / 185 * 10) 0;
