--- a/src/blocks/custom/short_hand_classes/buttons.scss
+++ b/src/blocks/custom/short_hand_classes/buttons.scss
@@ -2,7 +2,7 @@
 	border-radius: 0 !important;
 	width: 100%;
 	max-width: 100px;
-	padding: 2% 0 !important;
+	padding: 6px 0 0 !important;
 	height: 35px;
 	background-color: $gray !important;
 	font-size: (12em / 16) !important;
