--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,9 +1,8 @@
 .footer {
-  	width: 100%;
-  	min-height: 185px;
-  	position: relative;
-	  z-index: -1;
-  	padding-top: (73% / 185 * 10);
+    @extend .header;
+    width: 100%;
+    min-height: 185px;
+    padding-top: (73% / 185 * 10);
   	@include breakpoint($xs) {
   		min-height: 75px;
   		padding: (80% / 185 * 10) 0;
