--- a/src/blocks/main/userPanel/logInFrom/logInFormButtons/__forgotPass.scss
+++ b/src/blocks/main/userPanel/logInFrom/logInFormButtons/__forgotPass.scss
@@ -1,6 +1,8 @@
 .logInFormButtons__forgotPass {
 	@extend .floatLeft;
 	@extend .prettyTopMargin;
+	@extend .onePercentSidePaddings;
 	font-size: (10em / 16);
 	color: $gray;
+	width: 100%;
 }
