Responsive styles of login In form completed. I created reducer and actions for user account.

--- a/src/blocks/main/userPanel/userPanel.scss
+++ b/src/blocks/main/userPanel/userPanel.scss
@@ -6,10 +6,13 @@
 	& .container{
 		width: 80%;
 	}
-	border-left: 10px solid $darkenLightGray;
+	$borderUserPanelStyles: 10px solid $darkenLightGray;
+	border-left: $borderUserPanelStyles;
 	@include breakpoint($xs) {
 		width: 100%;
 		max-width: none;
+		margin: 0;
+		border-right: $borderUserPanelStyles;
 	}
 }
 
