Try to push files to the repositories. It's problem

--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -7,10 +7,6 @@
 	}
 } 
 
-.contentWrapper {
-	@include susy-clearfix;
-	// min-height: 500px;
-}
-
-
-@import 'userPanel/userPanel.scss';
+@import './contentWrapper.scss';
+@import './userPanel/userPanel.scss';
+@import './news/news.scss';
