--- a/src/blocks/custom/custom.scss
+++ b/src/blocks/custom/custom.scss
@@ -65,6 +65,7 @@ body {
 // }
 h1 {
   font-size: $firstSizeHeading;
+  font-weight: normal;
 }
 h2 {
   font-size: $secondSizeHeading;
@@ -72,6 +73,9 @@ h2 {
 }
 ul {
   list-style: none;
+}
+p {
+ margin-top: 1em !important;
 }
 a {
   border-radius: 5px;
