--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -2,7 +2,7 @@
     @extend .header;
     width: 100%;
     min-height: 185px;
-    padding-top: (73% / 185 * 10);
+    padding-top: 45px;
   	@include breakpoint($xs) {
   		min-height: 75px;
   		padding: (80% / 185 * 10) 0;
