--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -10,3 +10,4 @@
 @import './contentWrapper.scss';
 @import './userPanel/userPanel.scss';
 @import './news/news.scss';
+@import './download/download.scss';
