--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -10,4 +10,5 @@
 @import './contentWrapper.scss';
 @import './userPanel/userPanel.scss';
 @import './news/news.scss';
+@import './register/register.scss';
 @import './download/download.scss';
