I've Created regiter's validation, styles. I made test logic of login form and register form. I am going to make reducers with promices.

--- a/src/blocks/custom/custom.scss
+++ b/src/blocks/custom/custom.scss
@@ -16,7 +16,7 @@
 @import 'short_hand_classes/buttons.scss';
 @import 'short_hand_classes/float.scss';
 @import 'short_hand_classes/paddings.scss';
-@import 'short_hand_classes/formInput.scss';
+@import 'short_hand_classes/form.scss';
 
 // Custom styles
 html, body {
