--- a/src/blocks/main/userPanel/logInFrom/logInFormController/__error.scss
+++ b/src/blocks/main/userPanel/logInFrom/logInFormController/__error.scss
@@ -1,4 +1,5 @@
 .logInFormController__error {
-	color: $darkRed;
-	font-size: (13em / 16);
+	@extend .formError;
+	// color: $darkRed;
+	// font-size: (13em / 16);
 }
