Contacts section is completed.

--- a/src/blocks/custom/config/colors.scss
+++ b/src/blocks/custom/config/colors.scss
@@ -3,7 +3,7 @@ $darkenLightGray: #e0e0e0;
 $darkGray:  #1c1b1b;
 $baseColorFont: $darkGray;
 $baseLinkColor: $darkGray;
-$baseHoverLinkColor: $lightGray;
+$baseHoverLinkColor: $lightGray !important;
 $baseVisitedLinkColor:$darkGray;
 $baseActiveLinkColor: $darkGray;
 $baseFocusLinkColor: $darkGray;
