--- a/src/blocks/custom/short_hand_classes/buttons.scss
+++ b/src/blocks/custom/short_hand_classes/buttons.scss
@@ -13,4 +13,6 @@
 	}
 	color: $lightGray !important;
 	@extend .text-center;
+	$darkenGray: darken($gray, 5%) !important;
+	@include smooth-transition-button($background-color: $darkenGray);
 }	
