--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -12,3 +12,4 @@
 @import './news/news.scss';
 @import './register/register.scss';
 @import './download/download.scss';
+@import './contacts/contacts.scss';
