--- a/src/blocks/main/contentWrapper.scss
+++ b/src/blocks/main/contentWrapper.scss
@@ -15,7 +15,7 @@
 			padding-left: 15%;
 		}
 		@include breakpoint($xs) {
-			@include span(10);
+			width: 100% !important;
 			padding-left: 10%;
 			padding-right: 10%;
 		}
