--- a/src/blocks/main/contacts/visitCard/visitCardContact/__refer.scss
+++ b/src/blocks/main/contacts/visitCard/visitCardContact/__refer.scss
@@ -1,4 +1,7 @@
 .visitCardContact__refer {
 	color: $darkGray;
 	@extend .onePercentSidePaddings;
+	@include breakpoint($xxs) {
+		width: 100%;
+	}
 }
