--- a/src/blocks/main/contacts/visitCard/visitCard.scss
+++ b/src/blocks/main/contacts/visitCard/visitCard.scss
@@ -6,6 +6,11 @@
 	padding: 80px 0 0 130px;
 	position: relative;
 	margin-top: 58px;
+	@include breakpoint($sm) {
+		padding: 85px 10% 10%;
+		margin: 0;
+		height: auto;
+	}
 	&::after {
 		content: '';
 		position: absolute;
@@ -14,6 +19,10 @@
 		width: 37px;
 		@include responsive-background;
 		padding-bottom: 38px;
+		@include breakpoint($sm) {
+			top: 30px;
+			left: 10%;
+		}
 	}
 	&--minecraft {
 		&::after {
