Made styles for all futers forms.

--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -13,3 +13,5 @@
 @import './register/register.scss';
 @import './download/download.scss';
 @import './contacts/contacts.scss';
+@import './personalRoom/personalRoom.scss';
+@import './forgotPassword/forgotPassword.scss';
