Personal Room validattions and its responsive style was done. Add a few constants.

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -16,6 +16,7 @@
 		background: url('../img/minecraft/grass.png') repeat center;
 		background-size: 216px 175px;
 		height: 175px;
+		z-index: -1;
 	}
 }
 
