--- a/src/blocks/main/personalRoom/personalRoom.scss
+++ b/src/blocks/main/personalRoom/personalRoom.scss
@@ -1,4 +1,4 @@
-@import 'replanishBalanceForm/replanishBalanceForm.scss';
-@import 'subscribtionForm/subscribtionForm.scss';
-@import 'changeEmailForm/changeEmailForm.scss';
-@import 'changePasswordForm/changePasswordForm.scss';
+@import 'replanishBalance/replanishBalance.scss';
+@import 'subscribe/subscribe.scss';
+@import 'changeEmail/changeEmail.scss';
+@import 'changePassword/changePassword.scss';
