Added polifill for 'watch' in libs, but i'm not using in the project. Added responsive border for all section.

--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -7,6 +7,7 @@
 	}
 } 
 
+@import './awesomeBorder.scss';
 @import './contentWrapper.scss';
 @import './userPanel/userPanel.scss';
 @import './news/news.scss';
