--- a/src/blocks/header/navigation/navList/__refer.scss
+++ b/src/blocks/header/navigation/navList/__refer.scss
@@ -1,5 +1,5 @@
 .navItem__refer {
-  color: $lightGray;
+  color: $lightGray !important;
   font-size: $firstSizeHeading;
   padding-bottom: 4%;
   position: relative;
