--- a/src/blocks/header/brand/brand.scss
+++ b/src/blocks/header/brand/brand.scss
@@ -2,8 +2,13 @@
 	@include center-block;
 	max-width: 324px;
 	position: relative;
-	top: 100px;
 }
 
+.brand--minecraft {
+	top: 100px;	
+}
+.brand--samp {
+	top: 64px;	
+}
 
 @import '__name.scss';
