--- a/src/blocks/main/userPanel/server/__status.scss
+++ b/src/blocks/main/userPanel/server/__status.scss
@@ -19,3 +19,10 @@
 	} 
 
 }
+.server__status--samp {
+	background-color: $brown !important;
+	& > .bar {
+		background-color: $orange !important;
+	} 
+
+}
