--- a/src/blocks/footer/figure/figure.scss
+++ b/src/blocks/footer/figure/figure.scss
@@ -3,13 +3,23 @@
 .figure-- {
 	&steve_with_bow {
 		top: -40px;
-		left: 106px;
+		left: (106% / 1366 * 100);
 		max-width: 299px;
 	}
 	&chicken {
 		top: 16px;
-		right: 166px;
+		right: (166% / 1366 * 100);
 		max-width: 127px;
+	}
+	&woman {
+		top: -30px;
+		left: (115% / 1366 * 100);
+		max-width: 102px;
+	}
+	&nigga {
+		top: -28px;
+		right: (180% / 1366 * 100);
+		max-width: 137px;	
 	}
 }
 @import '__img.scss';
