--- a/src/blocks/header/figure/figure.scss
+++ b/src/blocks/header/figure/figure.scss
@@ -8,12 +8,27 @@
 	&--steve {
 		max-width: 187px;
 		top: (99% / 387) * 100;
-		left: 110px;	
+		left: (110% / 1366 * 100);
 	}
 	&--squid {
 		max-width: 139px;
-		top: (99% / 387) * 100;
-		right: 117px;
+		top: 99px;
+		right: (219% / 1366 * 100);
+	}
+	&--car {
+		top: 39px;
+		left: 0;
+		max-width: 441px;
+	}
+	&--helicopter {
+		top: 43px;
+		right: (247% / 1366 * 100);
+		max-width: 195px;
+	}
+	&--man {
+		bottom: 0;
+		right: 0;
+		max-width: 160px;	
 	}
 }
 @import '__img.scss';
