--- a/src/blocks/header/navigation/navList/__refer.scss
+++ b/src/blocks/header/navigation/navList/__refer.scss
@@ -6,7 +6,6 @@
   &::after {
     content: "";
     height: 3px;
-    background-color: $green;
     @include center-block;
     position: absolute;
     left: 50%;
@@ -15,6 +14,16 @@
     transition: width 0.5s, left 0.5s;
     @include breakpoint($xs) {
       content: none;
+    }
+  }
+  &--minecraft {
+    &::after {
+      background-color: $green;
+    }
+  }
+  &--samp {
+    &::after {
+      background-color: $orange;
     }
   }
   &:hover {
