--- a/src/blocks/header/navigation/navigation.scss
+++ b/src/blocks/header/navigation/navigation.scss
@@ -11,6 +11,16 @@
     height: 44px;
   }
 }
+.navigation--minecraft {
+}
+.navigation--samp {
+  @include breakpoint($md) {
+     margin-top: (17% / 387) * 100;
+  }
+  @include breakpoint($sm) {
+     margin-top: (23% / 387) * 100;
+  }
+}
 
 @import '__openMenuButton.scss';
 @import 'navList/navList.scss';
