--- a/src/blocks/header/projectsNav/projectsNav.scss
+++ b/src/blocks/header/projectsNav/projectsNav.scss
@@ -1,19 +1,33 @@
 
 
 .projects {
-	width: span(4);
+	width: span(5);
 	@include center-block;
-	margin-top: 120px;
+	@include breakpoint($md) {
+		width: span(6);
+	}
+	@include breakpoint($sm) {
+		width: span(7);
+	}
+	@include breakpoint($xs) {
+		width: span(8);
+	}
+	@include breakpoint($xxs) {
+		width: span(12);
+	}
+} 
+.projects--minecraft {
+	margin-top: 120px;	
 	@include breakpoint($md) {
 		margin-top: 125px;
 	}
 	@include breakpoint($sm) {
 		margin-top: 130px;
 	}
-	@include breakpoint($xs) {
-		width: span(10);
-	}
-} 
+}
+.projects--samp {
+	margin-top: 100px;
+}
 
 .projectsNav {
 	width: 100%;
