A main responsive page was completed. The site layout was completed. I'm tired.;c

--- a/src/blocks/custom/custom.scss
+++ b/src/blocks/custom/custom.scss
@@ -87,7 +87,7 @@ a {
     text-decoration: none;
   }
   &:hover {
-    background-color: $darkRed;
+    background-color: $baseHoverLinkBackgroundColor;
   }
 }
 
