--- a/src/blocks/custom/config/colors.scss
+++ b/src/blocks/custom/config/colors.scss
@@ -15,18 +15,15 @@ $orange: #ba7700;
 $paleOrange:  #e4c183;
 $brown: #754a00; 
 $shadow: rgba(0, 0, 0, .6);
-// Не обязательные цвета
-$yellow: #ffe276;
-$red: #bf4b49;
-$yellow: #fedd00;
-$whiteYellow: #fff8c9;
-$whiteOrange: #fad17a;
-$limon: #f5ff9a;
-$purple: #5f4575;
+$purple: #30014c;
+$limon: #cbc963;
+
+
 // font
 $baseColorFont: $darkGray;
 $baseLinkColor: $gray !important;
 $baseHoverLinkColor: $lightGray !important;
+$baseHoverLinkBackgroundColor:  #917569;
 $baseVisitedLinkColor:$darkGray;
 $baseActiveLinkColor: $darkGray;
 $baseFocusLinkColor: $darkGray;
