--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@
 @import "../blocks/header/header.scss";
 @import "../blocks/footer/footer.scss";
 @import "../blocks/main/main.scss";
-
+@import '../blocks/mainPage/mainPage.scss';
 
 
 
