User can change password and email.

--- a/media/src/blocks/main/personalRoom/replanishBalance/replanishBalanceForm/__button.scss
+++ b/media/src/blocks/main/personalRoom/replanishBalance/replanishBalanceForm/__button.scss
@@ -2,5 +2,5 @@
 	@extend .logInFormButtons__button;
 	@extend .logInFormButtons__button--submit;
 	float: none;
-	margin-top: 2em !important;
+	margin-top: 0 !important;
 }
