--- a/media/src/blocks/main/personalRoom/changePassword/changePasswordForm/changePasswordFormController/__error.scss
+++ b/media/src/blocks/main/personalRoom/changePassword/changePasswordForm/changePasswordFormController/__error.scss
@@ -1,3 +1,3 @@
-.changePasswordFormController__error {
-	@extend .registerFormController__error;
+.сhangePasswordFormController__error {
+	@extend .formError;
 }
