Fixed bugs. Added Temp Component  for forum. Removed close button from the right side of header.

--- a/media/src/blocks/header/navigation/__openMenuButton.scss
+++ b/media/src/blocks/header/navigation/__openMenuButton.scss
@@ -10,10 +10,10 @@
 }
 
 .navigation__closeMenuButton {
-	z-index: -1000;
 	top: 15px;
 	right: 15px;
+	display: none !important;
 	@include breakpoint($xs) {
-		z-index: 0;
+		display: block !important;
 	}
 }
