--- a/media/src/blocks/main/main.scss
+++ b/media/src/blocks/main/main.scss
@@ -16,3 +16,4 @@
 @import './contacts/contacts.scss';
 @import './personalRoom/personalRoom.scss';
 @import './forgotPassword/forgotPassword.scss';
+@import './rules/rules.scss';
