Added Temp Server Status with MinecraftAPI.

--- a/media/src/404.pug
+++ b/media/src/404.pug
@@ -16,7 +16,8 @@ html.no-js(lang="ru", manifest='/media/public/app.manifest')
         href="/media/public/img/favicon.ico"
     )
     title Gaming Fun
-    script(src='https://www.google.com/recaptcha/api.js')
+    script(src='https://www.google.com/recaptcha/api.js', async)
+    script(src='https://mcapi.us/scripts/minecraft.js', async)
   body
     #root
 
