--- a/GamingFun/theme/src/404.pug
+++ b/GamingFun/theme/src/404.pug
@@ -1,5 +1,6 @@
+| {% load static %}
 doctype
-html.no-js(lang="ru", manifest='/media/public/app.manifest')
+html.no-js(manifest="{% static 'gamingfun/app.manifest' %}")
   head
     meta(charset="UTF-8")
     meta(
@@ -13,15 +14,16 @@ html.no-js(lang="ru", manifest='/media/public/app.manifest')
     link(
         rel="shortcut icon", 
         type="image/x-icon", 
-        href="/media/public/img/favicon.ico"
+        href="{% static 'gamingfun/img/favicon.ico' %}"
     )
     title Gaming Fun
     script(src='https://www.google.com/recaptcha/api.js', async)
     script(src='https://mcapi.us/scripts/minecraft.js', async)
   body
     #root
+      
 
-    script(async, src="/media/public/js/main.js")
+    script(async, src="{% static 'gamingfun/js/main.js' %}")
     link(rel="stylesheet",
          href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css",
          media='none',
@@ -29,13 +31,14 @@ html.no-js(lang="ru", manifest='/media/public/app.manifest')
     )
     link(
       rel="stylesheet",
-      href="/media/public/css/main.css",
+      href="{% static 'gamingfun/css/main.css' %}",
       media='none',
       onload='if (media == "none") media = "all"'
     ) 
+
     link(
       rel="stylesheet",
-      href="/media/public/css/ie-10-up.css",
+      href="{% static 'gamingfun/css/ie-10-up.css' %}",
       media='none',
       onload='if (media == "none") media = "all"'
     ) 
@@ -43,5 +46,5 @@ html.no-js(lang="ru", manifest='/media/public/app.manifest')
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js">
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js">
     <![endif]-->
-    <!--[if IE]><link type="text/css" rel="stylesheet" href="/media/css/ie9.css" lazyload="1" /><![endif]-->
+    <!--[if IE]><link type="text/css" rel="stylesheet" href="{% static 'gamingfun/css/ie9.css' %}" lazyload="1" /><![endif]-->
 
