--- a/GamingFun/theme/src/blocks/main/main.scss
+++ b/GamingFun/theme/src/blocks/main/main.scss
@@ -6,7 +6,15 @@
 	@include breakpoint($xs) {
 	}
 } 
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
 
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
 @import './awesomeBorder.scss';
 @import './contentWrapper.scss';
 @import './userPanel/userPanel.scss';
