--- a/GamingFun/theme/src/blocks/custom/custom.scss
+++ b/GamingFun/theme/src/blocks/custom/custom.scss
@@ -61,9 +61,10 @@ body {
   color: $baseColorFont;
   background-color: $lightGray;
 }
-// button, a {
-//   cursor: pointer;
-// }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: inherit;
+}
 h1 {
   font-size: $firstSizeHeading;
   font-weight: normal;
